--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,15 @@ script:
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t reverseproxy ./udagram-reverseproxy
 # Tagging 
-  - docker tag udagram-api-feed thebluesky37/udagram-api-feed
-  - docker tag udagram-api-user thebluesky37/udagram-api-user
-  - docker tag udagram-frontend thebluesky37/udagram-frontend
-  - docker tag reverseproxy thebluesky37/reverseproxy
+  - docker tag udagram-api-feed thebluesky37/udagram-api-feed:v1
+  - docker tag udagram-api-user thebluesky37/udagram-api-user:v1
+  - docker tag udagram-frontend thebluesky37/udagram-frontend:v1
+  - docker tag reverseproxy thebluesky37/reverseproxy:v1
 # Do similar for other three images``` 
 # Push 
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push thebluesky37/udagram-api-feed
-  - docker push thebluesky37/udagram-api-user
-  - docker push thebluesky37/udagram-frontend
-  - docker push thebluesky37/reverseproxy
+  - docker push thebluesky37/udagram-api-feed:v1
+  - docker push thebluesky37/udagram-api-user:v1
+  - docker push thebluesky37/udagram-frontend:v1
+  - docker push thebluesky37/reverseproxy:v1
