--- a/deploy/env-secret.yaml
+++ b/deploy/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: gRjbFl9_
+  POSTGRES_USERNAME: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: Z1JqYkZsOV8=
